--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="brand">nordstrom</h1>
     <ul class="navigation">
       <li>designer</li>
-      <li>woment</li>
+      <li>women</li>
       <li>men</li>
       <li>kids</li>
       <li>home & gifts</li>
